# Nixfiles

./: .gitignore  README.md  extra_info.nix  flake.nix  flake.nix.in  graphical.nix  home.nix  localinfo.nix.template  p10k.zsh  plugins.py  rustdev.nix  sources.toml  str-obf.nix  updateMinus.sh  wm.nix  zprofile
.github/workflows/: build.yml  merge.yml  update.yaml
_sources/: generated.json  generated.nix
de/: hm.nix  nixos.nix
gaming/: hm.nix  nixos.nix
git/: default.nix
gui/: hm.nix  nixos.nix
gui/terminal/: foot.nix
gui/wm/: default.nix  i3.nix
hostconfig/: default.nix
hostconfig/ZeNixComputa/: default.nix  extra_info.nix  hardware-configuration.nix  hm.nix  nixos.nix
hostconfig/ZeNixLaptop/: default.nix  (+4 more)
minimal/: default.nix  hm.nix  nixos.nix  nom-rebuild.patch  p10k.zsh
neovim/: completion.nix  default.nix  lsp.nix  notes.nix  pkg.nix
nixos/: anbox.nix  configuration.nix  hardware-configuration.nix  home.nix  localcfg.nix  pkg.nix
nvim/: init.lua  init.vim
personal-cli/: hm.nix  nixos.nix
personal-gui/: hm.nix  nixos.nix
pkgs/: bars-to-bwav.nix  ctcache.nix  default.nix  dotacat.nix  flex-launcher.nix  frg.nix  jira-cli.nix  kabalist.nix  lemminx-bin.nix  mesonlsp.nix  msbt.nix  oead.nix  oscclip.nix  proton-ge.nix  pulse8-cec.nix  push-to-talk.nix  rmc.nix  rstb.nix  sarc.nix  simulationcraft.nix  vdo-ninja.nix  warcraftlogs.nix  weakauras-companion.nix  wowup.nix  xdg-ninja.nix
roaming/: nixos.nix
scripts/: hbw
templates/: default.nix
templates/perseus/: Cargo.toml  flake.nix
templates/perseus/src/: main.rs
templates/webapp/: .gitignore  Cargo.toml  flake.nix
templates/webapp/api/: Cargo.toml
templates/webapp/api/src/: lib.rs
templates/webapp/app/: Cargo.toml  index.html
templates/webapp/app/src/: main.rs
templates/webapp/src/: main.rs
templates/webapp/src/routes/: mod.rs
templates/webserver/: Cargo.toml  flake.nix
templates/webserver/src/: main.rs
templates/webserver/templates/: index.html
wm/: default.nix  hm.nix  i3.nix  i3like-utils.nix  i3like.nix  niri.nix  nixos.nix  noctalia-cfg.json  sway.nix
zfunc/: _kabalist_cli
(+86 files in other folders)
